--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.46MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-178.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.60MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
-  - {name: 🇦🇺 澳大利亚-485.7KB/s(Youtube:不良林), server: 185.167.116.253, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇦🇺 澳大利亚-707.3KB/s(Youtube:不良林), server: 185.167.116.253, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇦🇺 澳大利亚-580.9KB/s(Youtube:不良林), server: 185.167.116.253, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林), server: 185.167.116.253, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇦🇺 澳大利亚-313.3KB/s(Youtube:不良林), server: 185.167.116.253, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-347.2KB/s(Youtube:不良林), server: 185.167.116.24, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇺🇸 美国-4.26MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-383.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林), server: 185.167.116.24, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇦🇺 澳大利亚-305.5KB/s(Youtube:不良林), server: 185.167.116.24, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇦🇺 澳大利亚-430.2KB/s(Youtube:不良林), server: 185.167.116.24, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇦🇺 澳大利亚-738.4KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-761.6KB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-485.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-707.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-580.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-313.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-347.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-383.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-430.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-738.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-761.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-485.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-707.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-580.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-313.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-347.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-383.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-430.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-738.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-761.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-485.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-707.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-580.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-313.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-347.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-383.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-430.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-738.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-761.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-485.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-707.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-580.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-313.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-347.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-383.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-430.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-738.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-761.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-485.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-707.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-580.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-313.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-347.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-383.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-430.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-738.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-761.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-485.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-707.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-580.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-313.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-347.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-383.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-430.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-738.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-761.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-485.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-707.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-580.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-313.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-347.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-383.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-430.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-738.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-761.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
