--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-166.7KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-182.2KB/s(Youtube:不良林), server: 185.167.116.253, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇨🇳 中国-2.37MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-780.9KB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇸🇬 新加坡-2.40MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇬🇧 英国-974.7KB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.64MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-331.5KB/s(Youtube:不良林), server: zh01lv5sgp03.feiguayun.xyz, port: 34087, type: ss, cipher: aes-256-gcm, password: 6f8ebe83-8910-4106-9dc4-18a41cc20ed4}
+  - {name: 🇫🇷 法国-683.4KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇳🇱 荷兰-2.00MB/s(Youtube:不良林), server: nl1.nodegz.top, port: 443, type: trojan, password: 5f0097d5-3401-3874-8328-6f2df48bbac7, sni: nl1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-557.9KB/s(Youtube:不良林), server: blr.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: blr.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-922.0KB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-166.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-182.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-780.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
+      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-166.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-182.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-780.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
+      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-166.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-182.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-780.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
+      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-166.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-182.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-780.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
+      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-166.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-182.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-780.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
+      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-166.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-182.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-780.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
+      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-166.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-182.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-780.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
+      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
