--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-974.7KB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-331.5KB/s(Youtube:不良林), server: zh01lv5sgp03.feiguayun.xyz, port: 34087, type: ss, cipher: aes-256-gcm, password: 6f8ebe83-8910-4106-9dc4-18a41cc20ed4}
-  - {name: 🇫🇷 法国-683.4KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇳🇱 荷兰-2.00MB/s(Youtube:不良林), server: nl1.nodegz.top, port: 443, type: trojan, password: 5f0097d5-3401-3874-8328-6f2df48bbac7, sni: nl1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-557.9KB/s(Youtube:不良林), server: blr.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: blr.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-922.0KB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇮🇳 印度-1.17MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-614.7KB/s(Youtube:不良林), server: nl1.nodegz.top, port: 443, type: trojan, password: 5f0097d5-3401-3874-8328-6f2df48bbac7, sni: nl1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-204.7KB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 6f8ebe83-8910-4106-9dc4-18a41cc20ed4}
+  - {name: 🇮🇳 印度-530.0KB/s(Youtube:不良林), server: blr.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: blr.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇸🇬 新加坡-368.4KB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-902.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-606.7KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-614.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-368.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-902.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-606.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-614.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-368.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-902.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-606.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-614.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-368.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-902.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-606.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-606.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-614.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-368.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-902.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-606.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-614.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-368.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-902.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-606.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-614.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-368.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-902.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-606.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-974.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-614.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-683.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-557.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-922.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-368.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-902.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-606.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
