--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.91MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-363.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.98MB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 6f8ebe83-8910-4106-9dc4-18a41cc20ed4}
-  - {name: 🇨🇳 台湾-1.04MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇩🇪 德国-348.9KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-995.6KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.32MB/s(Youtube:不良林), server: blr.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: blr.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-531.6KB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.53MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇮🇳 印度-421.9KB/s(Youtube:不良林), server: blr.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: blr.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活2天)中国-10.98MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-540.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.35MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-251.8KB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-873.6KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-838.5KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 未知国家-2.47MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-348.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.53MB/s(Youtube:不良林)
+      - 🇮🇳 印度-421.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-10.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-540.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-838.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 未知国家-2.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-348.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.53MB/s(Youtube:不良林)
+      - 🇮🇳 印度-421.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-10.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-540.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-838.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 未知国家-2.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-348.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.53MB/s(Youtube:不良林)
+      - 🇮🇳 印度-421.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-10.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-540.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-838.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 未知国家-2.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.04MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-348.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.53MB/s(Youtube:不良林)
+      - 🇮🇳 印度-421.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-10.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-540.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-838.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 未知国家-2.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-348.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.53MB/s(Youtube:不良林)
+      - 🇮🇳 印度-421.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-10.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-540.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-838.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 未知国家-2.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-348.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.53MB/s(Youtube:不良林)
+      - 🇮🇳 印度-421.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-10.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-540.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-838.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 未知国家-2.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-348.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.53MB/s(Youtube:不良林)
+      - 🇮🇳 印度-421.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-10.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-540.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-838.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 未知国家-2.47MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
