--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,10 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇳🇱 荷兰-445.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-413.9KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-3.30MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.58MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.39MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.50MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 柬埔寨-1.73MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 443, type: trojan, password: b8d5a1e1-17cb-3200-afb6-a9463692b83a, sni: kh1.nodegz.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.85MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
@@ -22,10 +22,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
       - 柬埔寨-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
@@ -37,10 +37,10 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
       - 柬埔寨-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
@@ -53,10 +53,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
       - 柬埔寨-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
@@ -73,10 +73,10 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
       - 柬埔寨-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
@@ -88,10 +88,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
       - 柬埔寨-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
@@ -104,10 +104,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
       - 柬埔寨-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
@@ -129,10 +129,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
       - 柬埔寨-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
